[package]
name = "xs-rust-library"
version = "0.1.0"
edition = "2021"
authors = ["xsware.at"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
parking_lot = "0.12"
thiserror = "1.0"
displaydoc = "0.2"
x25519-dalek = { version = "1.2.0" }
rand_core = { version = "0.5", default-features = false }
aes-gcm = "0.10"
generic-array = "0.14"

[lib]
doctest = false